errors corrections