@@ -284,7 +284,7 @@ public class Board {
            for(int i = 0; i<6; i++){
                if(next.getSides(i).hasatom()==true){
                    atomp.add(i);
-                   System.out.println("arry where its ..."+atomp);
+
 
                 }
                }
@@ -303,14 +303,17 @@ public class Board {
                     n=(n+3)%6;
                 }
             } else if (atomp.size()==2) {
-                if((((n + 1) % 6) == atomp.get(0) || ((n + 1) % 6) ==atomp.get(1)) && (((n ) % 6) == atomp.get(0) || ((n ) % 6) ==atomp.get(1))){
+                if ((atomp.getFirst()==(n+2)%6) || (atomp.getFirst()==(n-2+6)%6) || (atomp.getLast()==(n+2)%6) || (atomp.getLast()==(n-2+6)%6)) {
+                    n=(n+3)%6;
+                }
+                else if((((n + 1) % 6) == atomp.get(0) || ((n + 1) % 6) ==atomp.get(1)) && (((n ) % 6) == atomp.get(0) || ((n ) % 6) ==atomp.get(1))){
                     n=(n-2+6)%6;
                 } else if ((((n - 1+6) % 6) == atomp.get(0) || ((n - 1+6) % 6) ==atomp.get(1)) && (((n ) % 6) == atomp.get(0) || ((n ) % 6) ==atomp.get(1))) {
                     n=(n+2)%6;
                 }else if ((((n - 1+6) % 6) == atomp.get(0) || ((n - 1+6) % 6) ==atomp.get(1)) && (((n + 1) % 6) == atomp.get(0) || ((n + 1) % 6) ==atomp.get(1))) {
                     n=(n+3)%6;
                 }
-            } else if (atomp.size()==3) {
+            } else if (atomp.size()>2) {
                 n=(n+3)%6;
             }
             System.out.print(next.getValue()+"->");
